--- a/core-courses/2-web-layout-basic-level/17_Grids/17_7_Practical_Work_17_Grids_v2/css/teachers.css
+++ b/core-courses/2-web-layout-basic-level/17_Grids/17_7_Practical_Work_17_Grids_v2/css/teachers.css
@@ -45,8 +45,16 @@
   overflow: hidden;
 }
 
-.teachers__card-image {
+.teachers__card picture {
+  display: block;
   text-align: center;
+  color: var(--white);
+  background-color: var(--plum);
+}
+
+.teachers__card-image {
+  display: block;
+  height: 100%;
   object-fit: contain;
   box-shadow: 0 1px 10px var(--specific-gray);
 }
